--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.38",
+    "vue": "3.2.37",
     "vue-router": "^4.1.5",
     "vuetify": "3.0.0-beta.10",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^16.11.56",
     "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/cli-plugin-router": "~4.5.13",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.54.8",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vite-plugin-vuetify": "1.0.0-alpha.16",
+    "vue-i18n": "^9.2.2",
     "vue-tsc": "^0.40.7"
   }
 }
