--- a/package.json
+++ b/package.json
@@ -1,36 +1,33 @@
 {
-  "name": "vuetify-starter",
+  "name": "vuetify-project",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 4173",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "3.2.37",
-    "vue-router": "^4.1.5",
-    "vuetify": "3.0.0-beta.10",
-    "webfontloader": "^1.6.28"
+    "@mdi/font": "7.0.96",
+    "core-js": "^3.8.3",
+    "roboto-fontface": "*",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.0",
+    "vuetify": "^3.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^16.11.56",
+    "@types/node": "^18.11.9",
+    "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/cli-plugin-router": "~4.5.13",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.54.8",
-    "typescript": "~4.7.4",
+    "sass": "^1.55.0",
+    "typescript": "^4.0.0",
     "vite": "^3.0.9",
-    "vite-plugin-vuetify": "1.0.0-alpha.16",
-    "vue-i18n": "^9.2.2",
-    "vue-tsc": "^0.40.7"
+    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vue-tsc": "^1.0.9"
   }
 }
